2009-04-02  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:externalform bug (missing timestamp param).
	* projects/core/xsl/forminput.xsl
	* src/de/schlund/pfixxml/DerefServlet.java

2009-03-31  Andreas Kurth

	* skel/build-skel.xml: extractModules#chmod can cope with very long
	argument lists now.

2009-03-16  Martin Leidig  <mleidig@schlund.de>

	* projects/core/xsl/include.xsl: Added support for deferring includes
	until runtime by setting the 'pfx:include' element's 'level' attribute 
	to 'runtime'. The 'part' and 'href' values can be lately bound using
	the 'pfx:part' and 'pfx:href' elements, which are evaluated at
	runtime.

2009-03-10  Martin Leidig  <mleidig@schlund.de>

	Added Live-Jars support.

	Modified:
	* src/de/schlund/pfixxml/resources/ModuleResourceProvider.java: Use
	ModuleSourceLocator for looking up source or unpacked module directory

	Added:
	* src/de/schlund/pfixcore/util/LiveJarInfo.java: Reads information
	about configured live jars
	* src/de/schlund/pfixxml/resources/ModuleSourceResource.java:
	ModuleResource implemtation for file system
	* src/de/schlund/pfixxml/resources/ModuleSourceLocatorRegistry.java:
	registry for ModuleResourceLocators
	* src/de/schlund/pfixxml/resources/ModuleSourceLocator.java: interface
	for locators providing source file access for modules

2009-03-08  Martin Leidig  <mleidig@schlund.de>

	Fixed include error handling. Log detected modules.

	* src/de/schlund/pfixcore/util/ModuleInfo.java
	* src/de/schlund/pfixxml/util/Xslt.java
	* src/de/schlund/pfixxml/util/XsltResourceNotFoundException.java

2009-03-06  Martin Leidig  <mleidig@schlund.de>

	Improved error handling when included resource can't be found.

	* src/de/schlund/pfixxml/resources/ModuleResource.java
	* src/de/schlund/pfixxml/util/Xslt.java
	* src/de/schlund/pfixxml/util/XsltResourceNotFoundException.java

2009-03-04  Martin Leidig  <mleidig@schlund.de>

	Fixed resolving of XSLT includes from modules.

	* src/de/schlund/pfixxml/util/Xslt.java